--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   },
   "lint-staged": {
     "src/**/*.{js}": "eslint --cache --fix",
-    "src/**/*.{js,scss,md}": "prettier --write --ignore-unknown"
+    "src/**/*.{js,scss,md,html,json}": "prettier --write --ignore-unknown"
   }
 }
