--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "prepare": "husky install", 
+    "prepare": "husky install",
     "pre-commit": "lint-staged"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.8.3",
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
