--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "source": "src/resources/index.html",
   "scripts": {
     "start": "parcel",
+    "watchDB": "json-server --watch db.json --port 3021",
     "build": "parcel build",
     "prepare": "husky install",
     "pre-commit": "lint-staged"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
+    "buffer": "^5.7.1",
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
@@ -23,5 +25,9 @@
   "lint-staged": {
     "src/**/*.{js}": "eslint --cache --fix",
     "src/**/*.{js,scss,md,html,json}": "prettier --write --ignore-unknown"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "json-server": "^0.17.3"
   }
 }
